--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,10 @@ debug = true    # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
 [features]
+default = ["eg"]
 pio = ["esp-idf-sys/pio"]
+sl = ["num-traits", "euclid", "slint", "i-slint-core", "slint-build"]
+eg = ["embedded-graphics"]
 
 [dependencies]
 anyhow = {version = "1", features = ["backtrace"]}
@@ -25,10 +28,15 @@ esp-idf-hal = { version = "0.40", features = []}
 embedded-svc = { version = "0.24", features = ["experimental"] }
 embedded-hal = "=1.0.0-alpha.9"
 embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
-embedded-graphics = { version = "0.7" }
+embedded-graphics = { version = "0.7", optional = true }
+num-traits = { version = "0.2", features = ["std"], optional = true }
+euclid = { version = "0.22", default-features = false, optional = true  }
+slint = { version = "1.0", default-features = false, features = ["compat-1-0", "unsafe-single-threaded"], optional = true  }
+i-slint-core = { version = "1.0", default-features = false, features = ["embedded-graphics"], optional = true  }
 
 [build-dependencies]
 embuild = "0.31.1"
+slint-build = { version = "1.0", optional = true }
 
 [[package.metadata.esp-idf-sys.extra_components]]
 # component_dirs = ["lvgl_esp32_drivers"]
