--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
-name = "esp-lcd-test"
+name = "esp-idf-test"
 version = "0.1.0"
-authors = ["chenxu"]
+authors = ["Chen Xu <windoze@0d0a.com>"]
 edition = "2021"
 resolver = "2"
+rust-version = "1.77"
+
+[[bin]]
+name = "esp-idf-test"
+harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors
 
 [profile.release]
 opt-level = "s"
@@ -13,35 +18,25 @@ debug = true    # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
 [features]
-pio = ["esp-idf-sys/pio"]
+default = ["std", "embassy", "esp-idf-svc/native"]
+
+pio = ["esp-idf-svc/pio"]
+std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
+alloc = ["esp-idf-svc/alloc"]
+nightly = ["esp-idf-svc/nightly"]
+experimental = ["esp-idf-svc/experimental"]
+embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
 
 [dependencies]
-anyhow = {version = "1", features = ["backtrace"]}
-thiserror = "1.0"
-log = "0.4"
-lazy_static = "1.4"
-esp-idf-sys = { version = "0.33", features = ["binstart"] }
-esp-idf-svc = { version = "0.46", features = ["experimental"] }
-esp-idf-hal = { version = "0.41", features = []}
-embedded-svc = { version = "0.25", features = ["experimental"] }
-embedded-hal = "=1.0.0-alpha.10"
-embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
+log = { version = "0.4", default-features = false }
+anyhow = "1.0"
+esp-idf-svc = { version = "0.49", default-features = false }
+embedded-hal = { version = "1.0.0" }
 embedded-graphics = { version = "0.8" }
-num-traits = { version = "0.2", features = ["std"] }
 rand = { version = "0.8" }
-tinybmp = { version = "0.5" }
 
 [build-dependencies]
-embuild = "0.31.1"
+embuild = "0.32.0"
 
 [[package.metadata.esp-idf-sys.extra_components]]
-# component_dirs = ["lvgl_esp32_drivers"]
-component_dirs = ["lv"]
-# The bindgen is not usable until there is a new release of esp-idf-sys
-# @see https://github.com/esp-rs/esp-idf-sys/issues/180
-# bindings_header = "usb_util/usb_util.h"
-# bindings_module = "usb_util"
-
-[package.metadata.espflash]
-partition_table = "partitions_singleapp_large.csv" # Supports CSV and binary formats
-# format          = "direct-boot"    # Can be 'esp-bootloader' or 'direct-boot'
+component_dirs = ["hx8369"]
